<resources>
    <string name="app_name">JsonLu</string>
    <string name="action_settings">Setting</string>
    <string name="title_bar_back">返回</string>
    <string name="title_bar_name">标题</string>
    <string name="title_bat_close">关闭</string>
    <string name="account_no">账号</string>
    <string name="account_pwd">密码</string>
    <string name="tip_account_no">请输入账号</string>
    <string name="tip_account_pwd">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

</resources>
